traefik/02-traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: default
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.1
          args:
            - --log.level=INFO
#            - --accesslog=true
#            - --accesslog.format=json
            - --api=true
            - --api.insecure=true
            - --api.dashboard=true

            - --entrypoints.web.address=:80
            - --entryPoints.websecure.Address=:443

            - --certificatesResolvers.le.acme.dnsChallenge=true
            - --certificatesResolvers.le.acme.dnsChallenge.provider=cloudflare
            - --certificatesresolvers.le.acme.email=chhenni@gmail.com
            - --certificatesresolvers.le.acme.storage=acme.json

            - --metrics.prometheus=true
            - --metrics.prometheus.addEntryPointsLabels=true
            - --metrics.prometheus.addServicesLabels=true
            - --entryPoints.metrics.address=:8082
            - --metrics.prometheus.entryPoint=metrics

            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            # - --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: metrics
              containerPort: 8082
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
    - protocol: TCP
      port: 8082
      name: metrics
      targetPort: 8082
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "traefik-dashboard"
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: henni.dev
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: "*.henni.dev"

spec:
  rules:
    - host: traefik.henni.dev
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: traefik
                port:
                  number: 8080
