traefik/03-tester.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: default
  labels:
    app: containous
    name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containous
      task: whoami
  template:
    metadata:
      labels:
        app: containous
        task: whoami
    spec:
      containers:
        - name: containouswhoami
          image: containous/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: containous
    task: whoami

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "whoami-tester"
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: henni.dev
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: "*.henni.dev"

spec:
  rules:
    - host: k8s.henni.dev
      http:
        paths:
          - path: /whoami
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
